# gito-iot-platform

./: .env.example  .env.production.example  .env.staging.example  .env.token  .gitignore  CLAUDE.md  CLEANUP_TODO.md  DEPLOYMENT.md  DEPLOYMENT_QUICKREF.md  DEVELOPMENT.md  DEVICE_TYPE_FOREIGN_KEY_IMPLEMENTATION.md  FRONTEND_DEVICE_TYPE_UPDATES.md  LOGO_SETUP.md  Makefile  NEXTJS_FASTAPI_INTEGRATION.md  PHASE_2_COMPLETION.md  PHASE_3B_STATUS.md  PYTHON_IMPLEMENTATION_GUIDE.md  README.md  SESSION_SUMMARY.md  SETUP-CHECKLIST.md  TESTING_PROTOCOL_INTEGRATION.md  apply-seed.ps1  apply-seed.sh  deploy-local.ps1  deploy-staging.ps1  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  fix-staging-git.sh  fix_migration.py  gito_staging_deploy_new  gito_staging_deploy_new.pub  regenerate-deploy-key.ps1  setup-github-runner.sh  setup-staging.sh  staging_data_complete.sql  staging_data_export.sql  test_dashboard_api.sh  token.txt  (+1 more)
api/: DASHBOARD_API.md  DASHBOARD_TESTING.md  Dockerfile  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_device_registration_fields.py  003_drop_valid_metric_constraint.py  004_drop_solution_templates.py  005_nullable_device_hierarchy.py  006_device_token_lookup.py  007_tenant_metadata_and_events.py  008_ota_firmware_tables.py  009_tenant_hierarchy.py  010_timescaledb.py  011_device_commands.py  012_command_schema.py  013_solution_templates.py  014_device_type_key_mapping.py  015_integrations.py  016_extend_providers.py  017_chirpstack_mqtt.py  018_alert_events_composite.py  019_notification_queue_unique.py  020_alarms_active_dedup.py  (+9 more)
api/app/: __init__.py  __main__.py  cli.py  config.py  database.py  dependencies.py  limiter.py  main.py  middleware.py  migrate.py  security.py  seed.py
api/tests/: test_audit_log_middleware.py  test_bulk_operations.py  test_composite_alerts.py  test_database_rls_context.py  test_dependencies.py  test_device_groups.py  test_device_status.py  test_device_update_hierarchy_clear.py  test_digital_twin.py  test_email_notification_service.py  test_firmware_ota_execute.py  test_integration_schemas.py  test_invite_user.py  test_lorawan_parsers.py  test_notification_dispatcher.py  test_notification_template_crud.py  test_notifications_integration.py  test_ota_integration.py  test_settings_schema.py  test_status_param_shadowing.py  test_telemetry_ingest_funnel.py  test_unified_alert_rule_normalization.py  test_websocket_loop.py
shared/alarm_core/: pyproject.toml
shared/payload_codec/: pyproject.toml
(+442 files in other folders)
