[project]
name = "gito-alarm-core"
version = "0.1.0"
description = "Single alarm evaluation library shared by the Gito API and ingest processor"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alarm_core*"]
